added descriptions for services page.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://www.google.com/recaptcha/api.js?render=6LdIJ64qAAAAAAFXmoOT1Hv9YLiamSa7vaZ5xbch"></script>
 </head>
 <body class="bg-sky-50 mat-typography">
   <app-root></app-root>
