prepared site for initial launch.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://www.google.com/recaptcha/api.js?render=6LdIJ64qAAAAAAFXmoOT1Hv9YLiamSa7vaZ5xbch"></script>
 </head>
-<body class="bg-sky-50 mat-typography">
+<body class="bg-sky-50 overflow-x-hidden mat-typography">
   <app-root></app-root>
 </body>
 </html>
